# ugv_navigation_goals

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.yaml
documentation/results/: Evolutionary Algorithm 35 slope.txt  Evolutionary Algorithm 45 slope.txt  Hill-climbing 45 slope with N-best path-gen optimizations.txt  Hill-climbing 45 slope without N-best path-gen optimizations.txt  N-Best 35 slope.txt  N-Best 45 slope.txt
include/: header.hpp
include/evolutionary_include/: evolutionary.hpp
launch/: rulah_navigation_goals.launch
src/: rulah_navigation_goals.cpp
src/core/: bezier_curve.cpp  functions.cpp  utilities.cpp  vehicle_dynamics.cpp
src/core/evolutionary_core/: evolutionary_algorithm.cpp
src/generators/: evolutionary_algorithm_generator.cpp  hill_climbing_generator.cpp  n_best_generator.cpp  naive_generator.cpp
src/tests/: bezier_test.cpp  calculations_test.cpp
